--- a/HousePrice/HousePrice.ipynb
+++ b/HousePrice/HousePrice.ipynb
@@ -2597,9 +2597,7 @@
   {
    "cell_type": "markdown",
    "id": "f59e714b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### SVM"
    ]
@@ -2613,7 +2611,6 @@
      "end_time": "2023-06-03T06:12:35.712305Z",
      "start_time": "2023-06-03T06:12:31.956685Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -2774,8 +2771,8 @@
     "    }\n",
     "    \n",
     "    model = SVR(**params)\n",
-    "    score = np.mean(cross_val_score(model, X_preprocessed, y_log, scoring='neg_mean_squared_error'))\n",
-    "    return  (-score)**.5\n",
+    "    score = np.mean(cross_val_score(model, X_preprocessed, y_log, scoring='mean_squared_error'))\n",
+    "    return  score\n",
     "\n",
     "svm_reg_study = optuna.create_study(direction='minimize')\n",
     "svm_reg_study.optimize(objective, n_jobs=-1, n_trials=100)\n",
@@ -2786,22 +2783,6 @@
     "\n",
     "num_cpus = psutil.cpu_count(logical=True)\n",
     "print(f'''\\033[94m{num_cpus}\\033[0m out of \\033[94m{os.cpu_count()}\\033[0m CPUs are used.''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90cf79a1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-03T03:45:17.244058Z",
-     "start_time": "2023-06-03T03:45:17.232363Z"
-    },
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "best_model"
    ]
   },
   {
@@ -4289,9 +4270,7 @@
   {
    "cell_type": "markdown",
    "id": "369abd9f",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### XGBoost"
    ]
@@ -4305,7 +4284,6 @@
      "end_time": "2023-06-03T08:14:40.989442Z",
      "start_time": "2023-06-03T08:09:28.955127Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -4435,9 +4413,7 @@
   {
    "cell_type": "markdown",
    "id": "2dcc9d31",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Optimization History"
    ]
@@ -4451,7 +4427,6 @@
      "end_time": "2023-05-31T01:52:09.235472Z",
      "start_time": "2023-05-31T01:52:09.230296Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4491,9 +4466,7 @@
   {
    "cell_type": "markdown",
    "id": "455db35a",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Random Foreast"
    ]
@@ -4503,7 +4476,6 @@
    "execution_count": null,
    "id": "eb88ed37",
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4560,9 +4532,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e7fbc09f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -4570,18 +4540,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8bef1d0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "5393935e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### LightGBM"
    ]
@@ -4595,7 +4561,6 @@
      "end_time": "2023-06-03T08:48:10.031647Z",
      "start_time": "2023-06-03T08:36:29.595849Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
